--- a/clase 6/index.html
+++ b/clase 6/index.html
@@ -1,30 +1,150 @@
 <script>
 
-//---------------Imprimir todos los numeros decimlaes del 0 al 9, utilizando repeticion//
-var suma = 0.1;
-var i = 0;
-for (var i=0; i<=9; i++){
-   i = parseFloat(i) + parseFloat(suma);
-   console.log(+i);
-}
-//----------------Imprimir todos los numeros entre el 100 y 199-----//
+//--1--//
+//var suma = 0.1;
+//var i = 0;
+//for (var i=0; i<=9; i+0.1){
+//   i = parseFloat(i) + parseFloat(suma);
+//   console.log(+i);
+//}
+//--2--//
 //var c = 0;
 //    for (var c=100; c<=199; c++) {
 //        console.log(+c);
 //    }
-//----------Imprimir los numeros entre el 5 y el 20, saltando de 3 en tres------//
-//var f = 3;
-//var c = 2;
-//for (var c=2; c<=20; c+3) {
-//    i = parseInt(c) + parseInt(f)
-//       console.log(+c);
-//   }
-//escribir un programa  que solicite al usuario una cantidad y luego itere la cantidad de veces
+//--3--//
+//var suma = 3
+//var i = 2;
+//for(var i=2; i<=20; i+3){
+//    i = parseInt(i) + parseInt(suma)
+//        console.log(+i);
+//}
+//--4--//
+// var d = 0;
+// var p = parseInt(prompt("Ingrese un numero"))
+// var c = parseInt(prompt("confirma tu numero"))
+//         for(var d=p; d<=c; d++){
+//         console.log(+c);  
+//         console.log(+p*2-1);
+// }
+// var vb = parseInt(prompt("Ingrese un numero"))
+// var ad=((vb*2)+(-1));
+// for(i=vb; i<ad;i++){
+//     console.log(i);
+// }
+// console.log(vb);
+// console.log(ad);
+//--5--//
+// <script>
+//     // Escribir un programa que solicite al usuario una cantidad y luego itere la cantidad de veces dada.
+//     // en cada iteración, solicitar que ingrese un número. Al finalizar, mostrar la suma de todos los números ingresados.
+//     var num = parseInt(prompt("Ingrese un numero:"))
+//     switch(num){
+//         case 1:
+//        var num1= parseInt(prompt("Ingrese otro numero:"))
+//        var suma= num+num1;
+//        alert("La suma es: "+suma)
+//         break; 
+//         case 2:
+//         var num1= parseInt(prompt("Ingrese otro numero:"))
+//         var num2= parseInt(prompt("Ingrese otro numero:"))
+//         var suma= num+num1+num2;
+//          alert("La suma es: "+suma)
+//         break; 
+//         case 3:
+//         var num1= parseInt(prompt("Ingrese otro numero:"))
+//         var num2= parseInt(prompt("Ingrese otro numero:"))
+//         var num3= parseInt(prompt("Ingrese otro numero:"))
+//         var suma= num+num1+num2+num3;
+//          alert("La suma es: "+suma)
+//         break; 
+//         case 4:
+//         var num1= parseInt(prompt("Ingrese otro numero:"))
+//         var num2= parseInt(prompt("Ingrese otro numero:"))
+//         var num3= parseInt(prompt("Ingrese otro numero:"))
+//         var num4= parseInt(prompt("Ingrese otro numero:"))
+//         var suma= num+num1+num2+num3+num4;
+//          alert("La suma es: "+suma)
+//         break;
+//         case 5:
+//         var num1= parseInt(prompt("Ingrese otro numero:"))
+//         var num2= parseInt(prompt("Ingrese otro numero:"))
+//         var num3= parseInt(prompt("Ingrese otro numero:"))
+//         var num4= parseInt(prompt("Ingrese otro numero:"))
+//         var num5= parseInt(prompt("Ingrese otro numero:"))
+//         var suma= num+num1+num2+num3+num4+num5;
+//          alert("La suma es: "+suma)
+//         break;  
+//         case 6:
+//         var num1= parseInt(prompt("Ingrese otro numero:"))
+//         var num2= parseInt(prompt("Ingrese otro numero:"))
+//         var num3= parseInt(prompt("Ingrese otro numero:"))
+//         var num4= parseInt(prompt("Ingrese otro numero:"))
+//         var num5= parseInt(prompt("Ingrese otro numero:"))
+//         var num6= parseInt(prompt("Ingrese otro numero:"))
+//         var suma= num+num1+num2+num3+num4+num5+num6;
+//          alert("La suma es: "+suma)
+//         break;  
+//         case 7:
+//         var num1= parseInt(prompt("Ingrese otro numero:"))
+//         var num2= parseInt(prompt("Ingrese otro numero:"))
+//         var num3= parseInt(prompt("Ingrese otro numero:"))
+//         var num4= parseInt(prompt("Ingrese otro numero:"))
+//         var num5= parseInt(prompt("Ingrese otro numero:"))
+//         var num6= parseInt(prompt("Ingrese otro numero:"))
+//         var num7= parseInt(prompt("Ingrese otro numero:"))
+//         var suma= num+num1+num2+num3+num4+num5+num6+num7;
+//          alert("La suma es: "+suma)
+//         break;  
+//         case 8:
+//         var num1= parseInt(prompt("Ingrese otro numero:"))
+//         var num2= parseInt(prompt("Ingrese otro numero:"))
+//         var num3= parseInt(prompt("Ingrese otro numero:"))
+//         var num4= parseInt(prompt("Ingrese otro numero:"))
+//         var num5= parseInt(prompt("Ingrese otro numero:"))
+//         var num6= parseInt(prompt("Ingrese otro numero:"))
+//         var num7= parseInt(prompt("Ingrese otro numero:"))
+//         var num8= parseInt(prompt("Ingrese otro numero:"))
+//         var suma= num+num1+num2+num3+num4+num5+num6+num7+num8;
+//          alert("La suma es: "+suma)
+//         break;  
+//         case 9:
+//         var num1= parseInt(prompt("Ingrese otro numero:"))
+//         var num2= parseInt(prompt("Ingrese otro numero:"))
+//         var num3= parseInt(prompt("Ingrese otro numero:"))
+//         var num4= parseInt(prompt("Ingrese otro numero:"))
+//         var num5= parseInt(prompt("Ingrese otro numero:"))
+//         var num6= parseInt(prompt("Ingrese otro numero:"))
+//         var num7= parseInt(prompt("Ingrese otro numero:"))
+//         var num8= parseInt(prompt("Ingrese otro numero:"))
+//         var num9= parseInt(prompt("Ingrese otro numero:"))
+//         var suma= num+num1+num2+num3+num4+num5+num6+num7+num8+num9;
+//          alert("La suma es: "+suma)
+//         break;  
+//         case 10:
+//         var num1= parseInt(prompt("Ingrese otro numero:"))
+//         var num2= parseInt(prompt("Ingrese otro numero:"))
+//         var num3= parseInt(prompt("Ingrese otro numero:"))
+//         var num4= parseInt(prompt("Ingrese otro numero:"))
+//         var num5= parseInt(prompt("Ingrese otro numero:"))
+//         var num6= parseInt(prompt("Ingrese otro numero:"))
+//         var num7= parseInt(prompt("Ingrese otro numero:"))
+//         var num8= parseInt(prompt("Ingrese otro numero:"))
+//         var num9= parseInt(prompt("Ingrese otro numero:"))
+//         var num10= parseInt(prompt("Ingrese otro numero:"))
+//         var suma= num+num1+num2+num3+num4+num5+num6+num7+num8+num9+num10;
+//          alert("La suma es: "+suma)
+//         break; 
+//         default:
+//         alert("El número "+num+ " es mayor, por lo tanto, no se puede realizar el proceso");
+//     }
+
+//
 //--------------Sumatoria de los numeros del 0 al  100----------//
 //var suma = 0;
 // for (var b=0; b<=100; b++){
-  // suma = parseInt(suma) + parseInt(b);
- //  console.log(+suma);
- // }
+//   suma = parseInt(suma) + parseInt(b);
+//   console.log(+suma);
+//  }
 
 </script>
